[package]
name = "rvfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.2"
lazy_static = "1.4.0"
hashbrown = "0.12.0"
bitflags = "1.3.2"
logger = {path="../logger"}

[dev-dependencies]
color-backtrace = "0.5.1"
