[package]
name = "rvfs"
version = "0.2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Godones/rvfs"
license = "MIT"
authors = ["Godones <chenlinfeng25@outlook.com>"]
description = "A virtual file system for rust"
keywords = ["vfs", "virtual file system", "rust"]
categories = ["filesystems::virtual"]
documentation = "https://docs.rs/rvfs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.2"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
hashbrown = "0.12.0"
bitflags = "1.3.2"
log = "0.4.17"
downcast = {version =  "0.11.0" ,default-features = false}

[dev-dependencies]
env_logger = "0.10.0"
#dbfs2 = {path = "../dbfs2"}
#jammdb = {git = "https://github.com/Godones/jammdb.git"}
